--- a/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
+++ b/Owncloud iOs Client WatchKit App/Base.lproj/Interface.storyboard
@@ -129,13 +129,13 @@
             <objects>
                 <controller id="wrF-sl-fr9" customClass="ThreeRingsController" customModule="Owncloud_iOs_Client_WatchKit_Extension">
                     <items>
-                        <group width="1" height="1" alignment="left" layout="vertical" id="g05-Qk-Wy4">
+                        <group width="1" height="166" alignment="left" layout="vertical" id="g05-Qk-Wy4">
                             <items>
                                 <group width="1" height="1" alignment="left" backgroundImage="out_kind_ring-0" contentMode="scaleAspectFit" layout="vertical" id="7ug-HO-D88" userLabel="OutRing">
                                     <items>
                                         <group width="1" height="1" alignment="left" backgroundImage="middle_kind_ring-0" contentMode="scaleAspectFit" layout="vertical" id="b30-94-T8T" userLabel="MiddleRing">
                                             <items>
-                                                <group width="1" height="1" alignment="left" backgroundImage="inner_kind_ring-0" contentMode="scaleAspectFit" layout="vertical" id="fRg-fH-Q5c" userLabel="InnerRing">
+                                                <group width="1" height="166" alignment="left" backgroundImage="inner_kind_ring-0" contentMode="scaleAspectFit" layout="vertical" id="fRg-fH-Q5c" userLabel="InnerRing">
                                                     <items>
                                                         <group height="73" alignment="left" verticalAlignment="center" layout="vertical" spacing="0.0" id="AvL-Li-9fP" userLabel="Index">
                                                             <items>
@@ -165,8 +165,37 @@
                                 </group>
                             </items>
                         </group>
+                        <group width="1" alignment="center" layout="vertical" id="ecL-XU-xAD">
+                            <items>
+                                <table alignment="left" id="VO9-j9-dfH">
+                                    <items>
+                                        <tableRow identifier="InfoDataRow" selectable="NO" id="pb4-aI-aEy" customClass="InfoDataRow" customModule="Owncloud_iOs_Client_WatchKit_Extension">
+                                            <group key="rootItem" width="1" height="40" alignment="left" layout="vertical" id="VLX-As-OqZ">
+                                                <items>
+                                                    <label width="1" height="11" alignment="left" text="DATA USED" id="fwM-Ih-boc">
+                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <fontDescription key="font" type="system" pointSize="11"/>
+                                                    </label>
+                                                    <label width="1" height="18" alignment="left" text="550MB" id="RGm-tO-xT9">
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <fontDescription key="font" type="system" pointSize="18"/>
+                                                    </label>
+                                                </items>
+                                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            </group>
+                                            <connections>
+                                                <outlet property="detailText" destination="RGm-tO-xT9" id="Tw9-j1-pnw"/>
+                                                <outlet property="infoHeader" destination="fwM-Ih-boc" id="VqC-V9-6gQ"/>
+                                            </connections>
+                                        </tableRow>
+                                    </items>
+                                </table>
+                                <button width="1" alignment="left" title="Clear Cache" id="ARe-lH-0MA"/>
+                            </items>
+                        </group>
                     </items>
                     <connections>
+                        <outlet property="infoTable" destination="VO9-j9-dfH" id="hUi-fY-pgF"/>
                         <outlet property="innerProgressGroup" destination="fRg-fH-Q5c" id="072-Ts-1GZ"/>
                         <outlet property="middleProgressGroup" destination="b30-94-T8T" id="z2d-mW-6UP"/>
                         <outlet property="outProgressGroup" destination="7ug-HO-D88" id="keZ-Uk-mZi"/>
@@ -174,7 +203,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="59" y="217"/>
+            <point key="canvasLocation" x="-11" y="216.5"/>
         </scene>
         <!--Glance Interface Controller-->
         <scene sceneID="rjY-Ar-IMT">
