Added the round corners on the login button at the widget

--- a/OCTodayWidget/MainInterface.storyboard
+++ b/OCTodayWidget/MainInterface.storyboard
@@ -165,6 +165,9 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="openFilesTab:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="D0u-QC-X4C"/>
                                 </connections>
